# dsdc

./: .cvsignore  AUTHORS  Makefile.am  Makefile.in  PLAN  acdsdc.m4  acinclude.m4  aclocal.m4  cfg  config.h.in  configure  configure.in  mk  ok  proxy.T  setup.gnu
dsdc/: .cvsignore  Makefile.am  Makefile.in  admin.T  aiod2.T  dsdc_admin.h  dsdc_master.h  dsdc_proxy.h  dsdc_slave.h  main.C  master.C  master.T  output.C  proxy.T  slave.C
libdsdc/: .cvsignore  Makefile.am  Makefile.in  aiod2_client.T  aiod2_client.h  const.C  dsdc.C  dsdc.h  dsdc_conn.T  dsdc_conn.h  dsdc_const.h  dsdc_format.h  dsdc_lock.h  dsdc_match.h  dsdc_prot.x  dsdc_ring.h  dsdc_signal.h  dsdc_slave.h  dsdc_smartcli.h  dsdc_state.h  dsdc_stats.h  dsdc_stats1.h  dsdc_stats2.h  dsdc_tamed.Th  dsdc_util.C  dsdc_util.h  fscache.T  fscache.h  fslru.C  fslru.Th  fslru.h  lock.C  match.C  qanswer_aux.h  ring.C  slave.C  slave.T  smartcli.C  smartcli.T  smartcli_mget.C  (+6 more)
py/: setup.py
py2/: cli.py  dsdc_prot.py
rcfiles/freebsd54/: dsdc_master.sh  dsdc_slave.sh
tst/: .cvsignore  Makefile.am  Makefile.in  foo.C  fs_stress.T  fsstress.T  gen_files.py  gen_stress.py  tst.C  tst2.C  tst2.T  tst3.C  tst3.T  tst4.C  tst4.T  tst5.C  tst5.T  tst_prot.x  tstfscache.T  tstfslru.T
